// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly when default 1`] = `
<div
  class="container"
  data-testid="proficiencies-selector"
>
  <h3
    class="heading"
  >
    Skills
  </h3>
  <div
    class="selected-text"
  >
    0
    /
    2
     
    Skills
     
    Selected
  </div>
  <div
    class="proficiencies-container"
  >
    <div
      class="proficiency-container"
    >
      <div
        class="list-box-and-error-container"
        data-testid="select"
      >
        <label
          id="select-proficiency-label"
          style="font-size: 1.3rem;"
        >
          Select Skill
        </label>
        <div
          aria-labelledby="select-proficiency-label"
          class="list-box-container"
          style="font-size: 1.2rem;"
        >
          <button
            aria-expanded="false"
            aria-haspopup="listbox"
            class="button"
            data-testid="select-button"
            type="button"
          >
            —
            <svg
              aria-hidden="true"
              class="icon"
              fill="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M12.53 16.28a.75.75 0 01-1.06 0l-7.5-7.5a.75.75 0 011.06-1.06L12 14.69l6.97-6.97a.75.75 0 111.06 1.06l-7.5 7.5z"
                fill-rule="evenodd"
              />
            </svg>
          </button>
          <ul
            aria-activedescendant="—"
            class="list"
            data-testid="select-list"
            role="listbox"
            style="display: none;"
            tabindex="-1"
          >
            <li
              aria-selected="true"
              class="item selected"
              data-testid="data-blank"
              role="option"
              tabindex="0"
            >
              —
            </li>
            <li
              aria-selected="false"
              class="item"
              data-testid="data-skills-acrobatics"
              role="option"
              tabindex="0"
            >
              Acrobatics
            </li>
            <li
              aria-selected="false"
              class="item"
              data-testid="data-skills-athletics"
              role="option"
              tabindex="0"
            >
              Athletics
            </li>
            <li
              aria-selected="false"
              class="item"
              data-testid="data-skills-history"
              role="option"
              tabindex="0"
            >
              History
            </li>
            <li
              aria-selected="false"
              class="item"
              data-testid="data-skills-insight"
              role="option"
              tabindex="0"
            >
              Insight
            </li>
            <li
              aria-selected="false"
              class="item"
              data-testid="data-skills-religion"
              role="option"
              tabindex="0"
            >
              Religion
            </li>
            <li
              aria-selected="false"
              class="item"
              data-testid="data-skills-stealth"
              role="option"
              tabindex="0"
            >
              Stealth
            </li>
          </ul>
        </div>
      </div>
    </div>
    <div
      class="proficiency-container"
    >
      <div
        class="list-box-and-error-container"
        data-testid="select"
      >
        <label
          id="select-proficiency-label"
          style="font-size: 1.3rem;"
        >
          Select Skill
        </label>
        <div
          aria-labelledby="select-proficiency-label"
          class="list-box-container"
          style="font-size: 1.2rem;"
        >
          <button
            aria-expanded="false"
            aria-haspopup="listbox"
            class="button"
            data-testid="select-button"
            type="button"
          >
            —
            <svg
              aria-hidden="true"
              class="icon"
              fill="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M12.53 16.28a.75.75 0 01-1.06 0l-7.5-7.5a.75.75 0 011.06-1.06L12 14.69l6.97-6.97a.75.75 0 111.06 1.06l-7.5 7.5z"
                fill-rule="evenodd"
              />
            </svg>
          </button>
          <ul
            aria-activedescendant="—"
            class="list"
            data-testid="select-list"
            role="listbox"
            style="display: none;"
            tabindex="-1"
          >
            <li
              aria-selected="true"
              class="item selected"
              data-testid="data-blank"
              role="option"
              tabindex="0"
            >
              —
            </li>
            <li
              aria-selected="false"
              class="item"
              data-testid="data-skills-acrobatics"
              role="option"
              tabindex="0"
            >
              Acrobatics
            </li>
            <li
              aria-selected="false"
              class="item"
              data-testid="data-skills-athletics"
              role="option"
              tabindex="0"
            >
              Athletics
            </li>
            <li
              aria-selected="false"
              class="item"
              data-testid="data-skills-history"
              role="option"
              tabindex="0"
            >
              History
            </li>
            <li
              aria-selected="false"
              class="item"
              data-testid="data-skills-insight"
              role="option"
              tabindex="0"
            >
              Insight
            </li>
            <li
              aria-selected="false"
              class="item"
              data-testid="data-skills-religion"
              role="option"
              tabindex="0"
            >
              Religion
            </li>
            <li
              aria-selected="false"
              class="item"
              data-testid="data-skills-stealth"
              role="option"
              tabindex="0"
            >
              Stealth
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders correctly with types 1`] = `
<div
  class="container"
  data-testid="proficiencies-selector"
>
  <h3
    class="heading"
  >
    Proficiencies
  </h3>
  <div
    class="selected-text"
  >
    0
    /
    1
     
    Proficiencies
     
    Selected
  </div>
  <div
    class="types-container"
  >
    <div
      class="proficiency-container"
    >
      <label
        class="label"
        id="select-proficiency-type"
      >
        Select Proficiency Type
      </label>
      <div
        class="list-box-and-error-container"
        data-testid="select"
      >
        <div
          aria-labelledby="select-label"
          class="list-box-container"
          style="font-size: 1.2rem;"
        >
          <button
            aria-expanded="false"
            aria-haspopup="listbox"
            class="button"
            data-testid="select-button"
            type="button"
          >
            —
            <svg
              aria-hidden="true"
              class="icon"
              fill="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M12.53 16.28a.75.75 0 01-1.06 0l-7.5-7.5a.75.75 0 011.06-1.06L12 14.69l6.97-6.97a.75.75 0 111.06 1.06l-7.5 7.5z"
                fill-rule="evenodd"
              />
            </svg>
          </button>
          <ul
            aria-activedescendant="—"
            class="list"
            data-testid="select-list"
            role="listbox"
            style="display: none;"
            tabindex="-1"
          >
            <li
              aria-selected="true"
              class="item selected"
              data-testid="data-blank"
              role="option"
              tabindex="0"
            >
              —
            </li>
            <li
              aria-selected="false"
              class="item"
              data-testid="data-ARTISANS_TOOLS"
              role="option"
              tabindex="0"
            >
              Artisan's Tools
            </li>
            <li
              aria-selected="false"
              class="item"
              data-testid="data-MUSICAL_INSTRUMENTS"
              role="option"
              tabindex="0"
            >
              Musical Instruments
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;
